--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 dotenvy = "0.15.7"
-rocket = "0.5.1"
+rocket = { version = "0.5.1", features = ["json"] }
 serde = { version = "1.0.214", features = ["derive"] }
 surrealdb = "2.0.4"
 tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
